# TimeLocker

./: .aiignore  .bumpversion.cfg  .codecov.yml  .coveragerc  .editorconfig  .env  .env.test  .env.test.example  .gitignore  AGENTS.md  ALL_PR_REVIEW_COMMENTS_SUMMARY.md  CHANGELOG.md  CONFIGURATION_MIGRATION.md  CONTRIBUTING.md  DISTRIBUTION_CHECKLIST.md  PER_REPO_CREDENTIALS_GUIDE.md  PHASE_2_CODE_QUALITY_IMPROVEMENTS.md  PHASE_2_PLAN.md  PR_65_REVIEW_COMMENTS.md  PR_REVIEW_COMMENTS_ANALYSIS.md  README.md  REFACTORING_PHASE1_SUMMARY.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_PHASE3_SUMMARY.md  REFACTORING_PHASE4_PROGRESS.md  REFACTORING_PROGRESS.md  RELEASE_SUMMARY.md  SECURITY.md  SUPPORT.md  automation_examples.md  config_fixed.json  config_keyring_example.json  config_password_file_example.json  devfile.yaml  fix_imports.py  git-log-email-change.py  performance_metrics.json  pyproject.toml  pytest.ini  replace_unicode.py  (+7 more)
.augment/rules/: documentation.md  git.md  planning.md  preferences.md  testing.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: describe-pr.yml  on-demand-description.yml  on-demand-review.yml  on-demand-test-review.yml  on-demand-validation.yml  release.yml  test-action.yml  test-suite.yml  triage-issue.yml
.junie/: guidelines.md
Utils/: generate_platuml_class_diagram.py  jason2command_definition.py  json2command_definition.py  man2json.py
Utils/puml_generator/: __init__.py  class_info.py  class_parser.py  config.py  constants.py  main.py  plantuml_generator.py  relationship_visitor.py
Utils/tests/: test_class_relationship_parser.py  test_class_visibility 2.py  test_class_visibility.py  test_generate_platuml_class_diagram.py  test_json2command_definition.py  test_method_modifiers.py  test_plantuml_generator.py  test_plantuml_generator_themes.py
Writerside/: dbasrs.tree  redirection-rules.xml  simplifiedprocess.tree  srs.tree  td.tree  tpt.tree  tt.tree  user.tree  writerside.cfg
Writerside/cfg/: buildprofiles.xml  glossary.xml
Writerside/topics/: 1.2-scope.md  2-3-User-Characteristics.md  2-5-Assumptions-and-Dependencies.md  3-1-1-Repository-Management.md  3-1-3-Security.md  3-1-4-Recovery-Operations.md  3-1-6-Monitoring-Reporting.md  3-1-7-Error-Handling-Resource-Management.md  3-1-Functional-Requirements.md  3-2-External-Interface-Requirements.md  3-4-11-Infrastructure-Deployment.md  3-4-3-Usability.md  3-4-4-Maintainability-Support.md  3-4-5-Portability.md  3-4-6-Security-Compliance.md  3-4-8-Interoperability.md  3-4-9-Accessibility.md  3-Specific-Requirements.md  Summary.md  UC-BK-002.md  UC‑BK‑001.md  UC‑RM‑0011.md  timelocker-testing.md
docs/: Auto-Completion-Guide.md  CLI-Implementation-Status.md  CLI-Test-Suite-Implementation.md  DISTRIBUTION_CHECKLIST.md  DOCUMENTATION_ORGANIZATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MINIO_CHECKLIST.md  MINIO_SETUP_SUMMARY.md  MINIO_TESTING.md  MODERNIZATION_SUMMARY.md  PER_REPO_CREDENTIALS_GUIDE.md  PHASE_1_CRITICAL_FIXES.md  PHASE_3_TEST_QUALITY_IMPROVEMENTS.md  PHASE_4_OPTIONAL_ENHANCEMENTS.md  PROCESS_REORGANIZATION_SUMMARY.md  PR_59_REVIEW_COMMENTS.md  PR_64_REVIEW_COMMENTS.md  README.md  REFACTORING_SUMMARY.md  REPOSITORY_PASSWORD_WORKFLOW.md  S3_COMPATIBLE_SERVICES.md  SRS-Based-Technical-Architecture.md  Solo-Developer-AI-Process.md  TESTING_QUICKSTART.md  Technical-Architecture.md  TimeLocker-CLI-Command-Hierarchy-Updated.md  TimeLocker-CLI-Command-Hierarchy.md  TimeLocker-MVP-Plan.md  TimeLocker-UXFlow.md  Timeshift-Import.md  VALIDATION-SUMMARY.md  VERSION_MANAGEMENT.md  command_builder.md  comprehensive-test-plan.md  day2-final-achievements.md  day2-progress-summary.md  documentation-consolidation-summary.md  final-status-report.md  immediate-action-plan.md  (+14 more)
docs/0-planning-and-execution/: README.md  project-tracking.md  roadmap.md  simplified-process-checklist.md
docs/1-requirements/: 1-1-purpose.md  2-1-Product-Perspective.md  2-3-User-Characteristics.md  2-4-Constraints.md  2-5-Assumptions-and-Dependencies.md  3-1-1-Repository-Management.md  3-1-2-Backup-Operations.md  3-1-3-Security.md  3-1-4-Recovery-Operations.md  3-1-6-Monitoring-Reporting.md  3-1-7-Error-Handling-Resource-Management.md  3-1-8-Integration.md  3-1-9-Audit-Logs.md  3-4-1-Performance.md  3-4-10-Auditability.md  3-4-11-Infrastructure-Deployment.md  3-4-3-Usability.md  3-4-4-Maintainability-Support.md  3-4-5-Portability.md  3-4-7-Scalability.md  6-1-Glossary.md  6-2-Analysis-Models.md  6-6-OWASP-ASVS-v4-0.md  README.md  UC-ERR-001.md  UC-MON-001.md  UC-PM-001.md  UC-RM-001.md  UC-RM-002.md  UC-SC-001.md  UC-SEC-002.md  srs-1-introduction.md  srs-3-specific-requirements.md  (+3 more)
examples/: backup_operations_demo.py  enhanced_backup_operations_demo.py  enhanced_repository_demo.py  integrated_backup_example.py  recovery_operations_demo.py  repository_management_demo.py  security_service_demo.py
extracted_configs/: README.md
scripts/: add_restic_to_config.py  bump_version.py  extract_restic_config.py  generate_test_report.py  import_to_timelocker.py  performance_optimization.py  quick_validation.py  run_extraction.sh  run_final_validation.py  setup_minio_test.sh  show_extraction_summary.py  show_repository_uris.py  test_timelocker_config.py  validate_extracted_config.py
src/: backends.py  backup_manager.py  backup_repository.py  backup_snapshot.py  backup_target.py  file_exclusions.py  file_selections.py  py2puml.puml  restic_wrapper.py.bak  snapshot.py  target.py
test-results/: final_validation_summary.md  test1.r.md
tests/: README.md  conftest.py  test_backup_manager.py  test_backup_target.py  test_command_builder.py  test_command_builder_basic.py  test_command_builder_parameters.py  test_command_parameter.py  test_command_short_form.py  test_file_selections.py  test_generate_platuml_class_diagram.py  test_minio_connection.py  test_parameter_style.py  test_per_repo_credentials.py  test_repository_uri_validation.py  test_snapshot_id_validation.py  test_timeshift_cli_integration.py  test_timeshift_importer.py  test_version_management.py
(+765 files in other folders)
